Grass and clock

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -737,8 +737,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
         android:adjustViewBounds="false"
-        android:src="@mipmap/chapel"
-        android:background="none" />
+        android:background="@mipmap/myclock" />
 
     <ImageView
         android:layout_width="wrap_content"
