--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -736,7 +736,6 @@
         android:id="@+id/imageButton"
         android:adjustViewBounds="false"
         android:background="@mipmap/myclock"
-        android:onClick="myMainClick"
         android:layout_below="@+id/imageView38"
         android:layout_centerHorizontal="true" />
 
@@ -759,7 +758,10 @@
         android:layout_above="@+id/imageView7"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:background="@mipmap/headerbackg"
+        android:layout_marginBottom="5dp"
+        android:id="@+id/linearLayout">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -782,68 +784,104 @@
                     android:layout_gravity="center" />
             </FrameLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/imageView4"
-        android:layout_below="@+id/imageView5"
-        android:layout_above="@+id/imageView68"
-        android:layout_toRightOf="@+id/imageView4"
-        android:layout_marginLeft="30dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="120dp"
+            android:layout_height="36dp"
+            android:background="@mipmap/gemsscore"
+            android:layout_margin="10dp" >
+
+            <FrameLayout
+                android:layout_width="88dp"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="0"
+                    android:id="@+id/textView"
+                    android:textColor="#b817dc"
+                    android:layout_gravity="center" />
+            </FrameLayout>
+        </LinearLayout>
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:id="@+id/imageButton2"
-            android:background="@mipmap/buttonshui"
-            android:layout_below="@+id/imageView5"
-            android:layout_toRightOf="@+id/imageView5"
-            android:layout_toEndOf="@+id/imageView5" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton3"
-            android:background="@mipmap/buttonsrinok" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton4"
-            android:background="@mipmap/buttonsfish" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton5"
-            android:background="@mipmap/buttonsfermerhome" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton6"
-            android:background="@mipmap/buttonstreeshome" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton7"
-            android:background="@mipmap/buttonsgoodhouse" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton8"
-            android:background="@mipmap/buttonsbighouse" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageButton9"
-            android:background="@mipmap/buttonscherche" />
+            android:background="@mipmap/hamer"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView79"
+        android:layout_below="@+id/imageView7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@mipmap/firtree" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView90"
+        android:background="@mipmap/firtree"
+        android:layout_below="@+id/imageView66"
+        android:layout_toRightOf="@+id/imageButton"
+        android:layout_toEndOf="@+id/imageButton" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView91"
+        android:background="@mipmap/firtree"
+        android:layout_below="@+id/imageView4"
+        android:layout_toRightOf="@+id/imageView10"
+        android:layout_toEndOf="@+id/imageView10" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView92"
+        android:background="@mipmap/oaktree"
+        android:layout_alignTop="@+id/imageView17"
+        android:layout_toLeftOf="@+id/imageButton"
+        android:layout_toStartOf="@+id/imageButton" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView93"
+        android:background="@mipmap/firtree"
+        android:layout_below="@+id/imageView74"
+        android:layout_toRightOf="@+id/imageView62"
+        android:layout_toEndOf="@+id/imageView62" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView94"
+        android:background="@mipmap/firtree"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton5"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:alpha="0"
+        android:onClick="myMainClick" />
+
 
 </RelativeLayout>
